# k8s_oil_spill_detection

./: Dockerfile  README.md  main.py  pyproject.toml  test.py  train.ipynb
k8s/: deployment.yaml  hpa.yaml  service.yaml
model/: unet_oilspill.onnx
